# harmonic_vector_math

./: .gitignore  COMPLEXITY_ANALYSIS.md  README.md  TEST_READY.md  compile_dll.bat  compile_so.sh  convergence_analyzer.py  fixed_point_vectorization.py  harmonic_constants.py  harmonic_cutile_stride.cu  harmonic_gemm_sparse.py  harmonic_ops.py  harmonic_reduction.cu  harmonic_transformer.py  isf_optimization_config.json  metatron_compressor_engine.py  paper.tex  prime_vectorization_proof.py  pyproject.toml  test_cuda_dll.py  test_stride_dll.py  vectorized_math.py  verify_pytorch_cuda_dll.py
.github/workflows/: ci.yml
tests/: test_harmonic_gemm_sparse.py  test_harmonic_transformer.py  test_metatron_compressor.py
tests/e2e/: conftest.py  test_cross_features.py  test_cuda_integration.py  test_exhaust_stats.py  test_exhaust_stats_boundaries.py  test_fixed_point_ops.py  test_fixed_point_ops_boundaries.py  test_franklin_drift.py  test_franklin_drift_boundaries.py  test_gemm_selector.py  test_gemm_selector_boundaries.py  test_infra_sanity.py  test_m24308_mapping.py  test_m24308_mapping_boundaries.py  test_real_world_scenarios.py
tests/e2e/scripts/: verify_cross_features.py  verify_exhaust_stats.py  verify_exhaust_stats_boundaries.py  verify_fixed_point_ops.py  verify_fixed_point_ops_boundaries.py  verify_franklin_drift.py  verify_franklin_drift_boundaries.py  verify_gemm_selector.py  verify_gemm_selector_boundaries.py  verify_infra_sanity.py  verify_m24308_mapping.py  verify_m24308_mapping_boundaries.py  verify_scenarios.py
